[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[tool.black]
line-length = 79
target-version = ["py310"]

testpaths = [
    "tests"
]

[tool.pytest.ini_options]
markers = [
    "UNIFAC: classic UNIFAC model tests",
    "CH2: CH3, CH2, CH, C",
    "CeqC: CH2=CH, CH=CH, CH2=C, CH=C, C=C",
    "ACH: ACH, AC",
    "ACCH2: ACCH3, ACCH2, ACCH",
    "OH: OH, CH3OH",
    "CH3OH: CH3OH",
    "H2O: H2O",
    "ACOH: ACOH",
    "CH2CO: CH3CO, CH2CO",
    "CHO: CHO",
    "CCOO: CH3COO, CH2COO",
    "HCOO: HCOO",
    "CH2O: CH2O, CH-O, THF",
    "CH3NH2: CH3NH2, CH2NH2, CHNH2",
    "CNH: CH3NH, CH2NH, CHNH",
    "C3N: CH3N, CH2N",
    "ACNH2: ACNH2",
    "pyridine: C5H5N, C5H4N, C5H3N",
    "CCN: CH3CN, CH2CN",
    "COOH: COOH, HCOOH",
    "CCL: CH2CL, CHCL, CCL",
    "CCL2: CH2CL2, CHCL2, CCL2",
    "CCL3: CHCL3, CCL3",
    "CCL4: CCL4",
    "ACCL: ACCL",
    "CNO2: CH3NO2, CH2NO2, CHNO2",
    "ACNO2: ACNO2",
    "CS2: CS2",
    "CH3SH: CH3SH, CH2SH",
    "FURFURAL: FURFURAL",
    "DOH: DOH",
    "I: I",
    "BR: Br",
    "alquine: CH=-C",
    "DMSO: DMSO",
    "ACRY: ACRY",
    "CLCeqC: CL-(C=C)",
    "ACF: ACF",
    "DMF: DMF, HCON(..",
    "CF2: CF3, CF2, CF",
    "COO: COO",
    "SIH2: SIH3, SIH2, SIH, SI",
    "SIO: SIH2O, SIHO, SIO",
    "NMP: NMP",
    "CCLF: CCL3F, CCL2F, HCCL2F, HCCLF, CCLF2, HCCLF2, CCLF3, CCL2F2",
    "CON: CONH2, CONHCH3, CONHCH2, CON(CH3)2, CONCH3CH2, CON(CH2)2",
    "OCCOH: C2H2O2, C2H4O2",
    "CH2S: CH3S, CH2S, CHS",
    "morpholine: MORPH",
    "thiophene: C4H4S, C4H3S, C4H2S",
    "sulfones: (CH2)2SU, CH2CHSU",
    "mix: a mix of a lot of subgroupss",
    "composed: composed structures"
]

[project]
name = "ugropy"
version = "0.0.1"
authors = [{name = "Brandolín, Salvador Eduardo", email = "salvadorebrandolin@mi.unc.edu.ar"}]
license = {text = "All rights reserved"}
readme = "README.md"
description = "Get UNIFAC functional groups of PubChem compounds"
keywords = ["UNIFAC", "functional group", "thermodynamics", "chemical engineering"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
]

urls = {Homepage = "https://github.com/SalvadorBrandolin/ugrupy"}

dependencies = [
    'numpy >= 1.25.1',
    'pandas >= 2.0.3',
    'pubchempy == 1.0.4',
    'rdkit == 2023.3.2'
]
